<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/title_Status"/>

    <LinearLayout
        android:layout_marginVertical="10dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="60dp"
            android:layout_height="60dp">

            <com.google.android.material.card.MaterialCardView
                app:cardCornerRadius="30dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_face_24"/>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                app:cardCornerRadius="30dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/baseline_add_circle_24"
                    android:tint="@color/Merah"/>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:paddingStart="10dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_Status_saya"
                android:textSize="17dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_ketukan_untuk_memperbrui_status"
                android:textSize="14dp"/>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_Pembaruan_terkini"
        android:textSize="12dp"/>

    <RelativeLayout
        android:id="@+id/bar_atas_setelan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_alignParentStart="true"
            android:id="@+id/kembali"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_west_24"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/kembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/title_Setelan" />
        <ImageView
            android:layout_alignParentEnd="true"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_search_24"/>

    </RelativeLayout>
    <View
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>

</LinearLayout>