<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/bar_atas_setelan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_alignParentStart="true"
            android:id="@+id/btnKembali"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_west_24"/>
        <TextView
            android:layout_centerInParent="true"
            android:layout_toRightOf="@+id/btnKembali"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20dp"
            android:text="@string/Privasi" />

    </RelativeLayout>
    <View
        android:layout_marginHorizontal="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray"/>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="20dp"
                android:paddingStart="15dp"
                android:textSize="12dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Siapa yang dapat melihat informasi pribadi saya"/>

            <LinearLayout
                android:id="@+id/btn_terakhir_dilihat_dan_online"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Terakhir dilihat dan online"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="Kontak saya, Semua orang"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_foto_provil"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Foto profil"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="Semua orang"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_info"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="Info"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="Kontak saya"/>

            </LinearLayout>

            <TextView
                android:id="@+id/btn_status"
                android:paddingStart="15dp"
                android:paddingVertical="10dp"
                android:textSize="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_Status"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_marginStart="15dp"
                    android:paddingVertical="10dp"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="Laporan dibaca"/>

                    <TextView
                        android:layout_width="280dp"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="@string/jika_opsi_ini_dimatikan_anda_tidak_akan_mengirim_atau_menerima_lapoaran_dibaca"/>

                </LinearLayout>

                <androidx.appcompat.widget.SwitchCompat
                    android:theme="@style/Custom.Switch"
                    android:layout_alignParentEnd="true"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:scaleY="1.5"
                    android:scaleX="1.5"
                    android:paddingEnd="25dp" />
                <View
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/btn_timer_pesan_default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_marginStart="15dp"
                    android:orientation="vertical"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content">
                    <TextView
                        android:paddingVertical="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="Pesan Sementara"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="15dp"
                        android:text="Timer pesan default"/>

                    <TextView
                        android:paddingBottom="15dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="12dp"
                        android:text="@string/text_timer_pesan_default"/>
                </LinearLayout>

                <View
                    android:layout_alignParentBottom="true"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"/>

                <TextView
                    android:layout_alignParentEnd="true"
                    android:layout_centerInParent="true"
                    android:paddingEnd="10dp"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="Mati"/>

            </RelativeLayout>

            <LinearLayout
                android:id="@+id/btn_grup"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/grub"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/semua_orang"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_lokasi_terkini"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/lokasi_terkini"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_panggilan"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/title_Panggilan"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/text_panggilan"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_kontak_diblokir"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/kontak_diblokir"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="1"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_kunci_aplikasi"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/kunci_aplikasi"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="Dinonaktifkan"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_kunci_chat"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/kunci_chat"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/btn_lanjutan"
                android:paddingVertical="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/lanjutan"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="@string/text_Lanjutan"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"/>

            <LinearLayout
                android:id="@+id/btn_pemeriksaan_privasi"
                android:paddingVertical="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:text="@string/pemeriksaan_privasi"/>

                <TextView
                    android:layout_marginStart="15dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="12dp"
                    android:text="Kendalikan privasi dan pilih pengaturan yang tepat untuk Anda."/>

            </LinearLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</LinearLayout>